[package]
name = "pycanrs"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "Rust bindings for python-can."
repository = "https://github.com/opencan/pycanrs"
categories = ["api-bindings"]
keywords = ["can", "python-can", "socketcan", "socketcand", "slcan"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.1", features = ["auto-initialize"] }
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
ctrlc = "3.2.5"
